read report no submit, more moneey display place

--- a/team_card.html
+++ b/team_card.html
@@ -22,20 +22,19 @@
 						<form name="report-form" id="reportFrom" class="col-xs-12">
 							<div class="col-xs-12 bottom-inner-wrapper text-center">
 								<h3 class="col-xs-12 text-uppercase">attachments</h3>
-								<button id="iconWrapper" >
+								<button id="iconWrapper">
 									<img src="images/upload-media.png" alt="upload media">
 								</button>
-								<button id="iconWrapper" >
+								<button id="iconWrapper">
 									<img src="images/upload-media.png" alt="upload media">
 								</button>
-								<button id="iconWrapper" >
+								<button id="iconWrapper">
 									<img src="images/upload-media.png" alt="upload media">
 								</button>
 							</div>
 							<p class="col-xs-12">
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
 							</p>
-							<input type="submit" name="submit-report" value="send" class="col-xs-3 text-center">
 						</form>
 					</div>
 				</div>	
@@ -49,15 +48,15 @@
 						<form name="report" id="report" class="col-xs-12 topic-wrapper">
 							<div class="col-xs-12 upload-media">
 								<img src="images/upload-media.png" alt="upload media">
-								<input type="text" id="mediaUrlReport" placeholder="Insert URL adress">
+								<input type="text" id="mediaUrlReport" placeholder="Insert URL address">
 							</div>
 							<div class="col-xs-12 upload-media">
 								<img src="images/upload-media.png" alt="upload media">
-								<input type="text" id="mediaUrlReport" placeholder="Insert URL adress">
+								<input type="text" id="mediaUrlReport" placeholder="Insert URL address">
 							</div>
 							<div class="col-xs-12 upload-media">
 								<img src="images/upload-media.png" alt="upload media">
-								<input type="text" id="mediaUrlReport" placeholder="Insert URL adress">
+								<input type="text" id="mediaUrlReport" placeholder="Insert URL address">
 							</div>
 							<div class="col-xs-12 text-holder">
 								<textarea name="user-message" form="report" class="col-xs-12" placeholder="Write here..."></textarea>
@@ -72,7 +71,7 @@
 					<form id="uploadMediaForm" class="col-xs-12">
 						<div class="col-xs-12">
 							<img src="images/upload-media.png" alt="upload media">
-							<input type="text" id="mediaUrl" placeholder="Insert URL adress">
+							<input type="text" id="mediaUrl" placeholder="Insert URL address">
 						</div>
 						<input type="submit" id="submitUploadMedia" value="accept" class="col-xs-12 col-sm-3">
 					</form>
@@ -156,17 +155,17 @@
 				<div class="col-xs-12 bottom-inner-wrapper">
 					<h3 class="col-xs-12 text-uppercase text-center">reports</h3>
 					<ul class="col-xs-12 report-list report-read">
-						<li><a href="#">PSC-Paul</a> wanst to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
+						<li><a href="#">PSC-Paul</a> wants to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
 						</li>
-						<li><a href="#">Crazy Joe</a> wanst to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
+						<li><a href="#">Crazy Joe</a> wants to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
 						</li>
-						<li><a href="#">Leonidas</a> wanst to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
+						<li><a href="#">Leonidas</a> wants to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
 						</li>
 					</ul>
 				</div>
 				<div class="col-xs-12 bottom-inner-wrapper text-center">
 					<h3 class="col-xs-12 text-uppercase">attachments</h3>
-					<button id="iconWrapper" >
+					<button id="iconWrapper">
 						<img src="images/upload-media.png" alt="upload media">
 					</button>
 				</div>
