--- a/teams.html
+++ b/teams.html
@@ -14,7 +14,7 @@
 	<div id="content-wrapper">
 		<div id="content">
 			<div class="col-xs-12 col-sm-7 match-info">
-				<p class="col-xs-12 text-center">212 Teams (118 checked in)</p>	
+				<p class="col-xs-12 text-center">Teams</p>	
 			</div>
 			<div class="col-xs-12 col-sm-7 team-main">
 				<div class="col-xs-12 team-inner-wrapper">
