--- a/index.html
+++ b/index.html
@@ -1631,6 +1631,22 @@
 					<p>Battlefield Hardline 2v2 Opening Cup #1</p>
 				</div>
 				<div class="col-xs-12 col-sm-4 game-chat">
+					<div class="col-xs-12 game-right-info">
+						<h4 class="col-xs-12">Teams 2888 ( <span>199</span> checked in)</h4>
+						<div class="col-xs-12">
+							<div>
+								<img src="images/cup.png" alt="cup">
+								<div>
+									<p class="text-uppercase">start 17:25 gmt</p>
+									<p class="text-uppercase">end 20:30 gmt</p>
+								</div>
+							</div>
+							<div>
+								<p>Your next opponent:</p>
+								<a href="#">Team Amazing</a>
+							</div>
+						</div>
+					</div>
 					<div class="col-xs-12 game-chat-inner-wrapper">
 						<h5 class="text-center">Chat: 37854462</h5>
 						<div class="game-chat-inner">							
@@ -1773,5 +1789,6 @@
 <script src="./js/main_app.js"></script>
 <script src="./js/games_app.js"></script>
 <script src="./FlipClock-master/compiled/flipclock.min.js"></script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
