boreder color change

--- a/index.html
+++ b/index.html
@@ -1632,7 +1632,7 @@
 				</div>
 				<div class="col-xs-12 col-sm-4 game-chat">
 					<div class="col-xs-12 game-right-info">
-						<h4 class="col-xs-12">Teams 2888 ( <span>199</span> checked in)</h4>
+						<h4 class="col-xs-12">Teams<span> 2888 ( 199 checked in)</span></h4>
 						<div class="col-xs-12">
 							<div>
 								<img src="images/cup.png" alt="cup">
