--- a/index.html
+++ b/index.html
@@ -36,53 +36,272 @@
 				</ul>
 			</li>
 			<li class="col-md-1 col-md-offset-1 dropdown">
-				<div id="gameButton" class="menu-size text-center pointer border-bottom" data-toggle="dropdown">
+				<div id="gameButton" class="menu-size text-center pointer border-bottom">
 					<img src="images/game-menu.png" alt="game menu">
 				</div>
-					<div id="menuBackground" class="dropdown-menu menu-background">
-						<ul id="firstMenuBox" class="menu-box">
-							<li>
-								<h6>Playstation 4</h6>
-								<img src="images/playstation-menu.png" alt="playstation">
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img-2.gif" alt="game"></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img-2.gif" alt="game"></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img-2.gif" alt="game">Battlefield 4</a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img-2.gif" alt="game">Rocket League</a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img-2.gif" alt="game">Call of Duty: AW</a>
-							</li>
-						</ul>
-						<ul id="secondMenuBox" class="menu-box menu-xbox">
-							<li>
-								<h6>Xbox One</h6>
-								<img src="images/xbox-menu.png" alt="xbox">
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img.png" alt="game"></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img.png" alt="game"></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img.png" alt="game">Battlefield 4</a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img.png" alt="game"></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/menu-img.png" alt="game"></a>
-							</li>
-						</ul>
-					</div>	
+				<div id="menuBackground" class="dropdown-menu menu-background">
+					<div class="container">
+						<div id="menuXboxSlider" class="games-slider menu-scroll">
+							<h3 class="text-uppercase text-center">xbox one</h3>
+							<ul>
+								<li>
+									<a href="#">
+										<h5><span>MK X</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Battlefield 4</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Super Mario</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Tetris</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Pac Man</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Contra 2</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Tanks</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Arcanoid</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/xbox.png">
+											</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+						<div id="menuPlaystationSlider" class="games-slider menu-scroll">
+							<h3 class="text-uppercase text-center">playstation 4</h3>
+							<ul>
+								<li>
+									<a href="#">
+										<h5><span>MK X</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Battlefield 4</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Super Mario</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Tetris</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Pac Man</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Contra 2</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Tanks</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<h5><span>Arcanoid</span></h5>
+										<div class="img-holder">
+											<img src="images/game-slide.png">
+											<span>
+												<img src="images/playstation.png">
+											</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+						<div id="tournamentContainer" class="tournament-container">
+							<div class="tournament-title">
+								<h2 class="text-uppercase text-center">Rocket League</h2>
+								<div class="sm-pull-right">
+									<span class="text-uppercase text-center red-background">prizes</span>
+									<span class="text-uppercase text-center">players</span>
+								</div>
+							</div>
+							<ul class="col-xs-12">
+								<li>
+									<a href="#">
+										<div class="tournament-icons">
+											<img src="images/cup-menu.png" data-name="cup" alt="cup">
+											<img src="images/coins-menu.png" data-name="coins" alt="coins">
+										</div>
+										<p>PSC Winter Cup - Search & Destroy 1v1</p>
+										<div class="sm-pull-right">
+											<span data-name="play" class="text-uppercase text-center red-background hidden-xs">play</span>
+											<p>Today 21.02.16 - 20.00 CET</p>
+											<div class="xs-pull-right">
+												<span class="text-uppercase text-center red-background">&euro;120</span>
+												<span class="text-uppercase text-center">120</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="tournament-icons">
+											<img src="images/cup-menu.png" data-name="cup" alt="cup">
+											<img src="images/coins-menu.png" data-name="coins" alt="coins">
+										</div>
+										<p>PSC Winter Cup - Search & Destroy 1v1</p>
+										<div class="sm-pull-right">
+											<span data-name="play" class="text-uppercase text-center red-background hidden-xs">play</span>
+											<p>Tomorrow 21.02.16 - 20.00 CET</p>
+											<div class="xs-pull-right">
+												<span class="text-uppercase text-center red-background">&euro;120</span>
+												<span class="text-uppercase text-center">150</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="tournament-icons">
+											<img src="images/cup-menu.png" data-name="cup" alt="cup">
+										</div>
+										<p>PSC Winter Cup - Search & Destroy 1v1</p>
+										<div class="sm-pull-right">
+											<span data-name="play" class="text-uppercase text-center red-background hidden-xs">play</span>
+											<p>Sunday 21.02.16 - 20.00 CET</p>
+											<div class="xs-pull-right">
+												<span class="text-uppercase text-center red-background">&euro;120</span>
+												<span class="text-uppercase text-center">90</span>
+											</div>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div id="tournamentPages" class="tournament-pages">
+								<a href="#" class="active"><span class="text-center">1</span></a>
+								<a href="#"><span class="text-center">2</span></a>
+								<a href="#"><span class="text-center">3</span></a>
+								<a href="#"><span class="text-center">4</span></a>
+								<a href="#"><span class="text-center">5</span></a>
+								<a href="#"><span class="text-center">6</span></a>
+								<a href="#"><span class="text-center">7</span></a>
+								<a href="#"><span class="text-center">8</span></a>
+								<a href="#"><span class="text-center">9</span></a>
+								<a href="#"><span class="text-center">10</span></a>
+							</div>
+						</div>
+					</div>
+				</div>	
 			</li>
 			<li id="coins" class="col-md-1 col-md-offset-1 col-lg-offset-2" data-toggle="modal" data-target="#paymentContainer">
 				<div class="menu-size text-center pointer border-bottom">
@@ -97,32 +316,36 @@
 				</div>
 				<div class="dropdown-menu menu-box">
 					<h6 class="text-center">Today</h6>
-					<ul>
-						<li>
-							<p >You have been invited to play in a match.
+					<ul class="col-xs-12">
+						<li class="col-xs-12">
+							<p>You have been invited to play in a match.
 							</p>
 							<img src="images/delete.png">
 						</li>
-						<li>
-							<p >You have been invited to play in a match.</p>
+						<li class="col-xs-12">
+							<p>You have been invited to play in a match.</p>
 							<img src="images/delete.png">
 						</li>
-						<li>
-							<p >You have been invited to play in a match.
+						<li class="col-xs-12">
+							<p>You have been invited to play in a match.
 							</p>
 							<img src="images/delete.png">
 						</li>
-						<li>
-							<p >You have been invited to play in a match.</p>
+						<li class="col-xs-12">
+							<p>You have been invited to play in a match.</p>
 							<img src="images/delete.png">
 						</li>
-						<li>
-							<p >You have been invited to play in a match.</p>
+						<li class="col-xs-12">
+							<p>You have been invited to play in a match.</p>
 							<img src="images/delete.png">
 						</li>
-						<li>
-							<p >You have been invited to play in a match.</p>
+						<li class="col-xs-12">
+							<p>You have been invited to play in a match.</p>
 							<img src="images/delete.png">
+							<div class="col-xs-12">
+								<button class="col-xs-3 col-xs-offset-2 text-uppercase text-center" data-toggle="modal" data-target="#errorContainer">yes</button>
+								<button class="col-xs-3  col-xs-offset-1 text-uppercase text-center">no</button>
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -367,7 +590,7 @@
 					<div class="col-xs-12">
 						<img src="images/password.png">
 						<input type="password" id="loginPassword" placeholder="password">
-						<button id="forgotPassword">forgot password?</button>
+						<button id="forgotPassword" data-dismiss="modal" data-toggle="modal" href="#forgotPasswordContainer">forgot password?</button>
 					</div>
 					<input type="submit" name="submit-login" value="login" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
 					<div class="col-xs-12">
@@ -376,6 +599,21 @@
 					</div>
 				</form>
 				<button id="moveToRegister" class="col-xs-12 col-sm-4 col-sm-offset-4 text-uppercase text-center change-form-button" data-dismiss="modal" data-toggle="modal" href="#registerContainer">register</button>
+			</div>
+		</div>
+	</div>
+	<div id="forgotPasswordContainer" class="background-cover covering-box modal fade" role="dialog">
+		<div id="forgotPasswordInnerWrapper" class="row login-wrapper modal-dialog">
+			<h2 class="col-xs-12 text-center text-uppercase">logo</h2>
+			<div class="col-xs-12">
+				<form name="forgot-password" id="forgotPasswordForm" class="col-xs-12">
+					<div class="col-xs-12">
+						<img src="images/email.png">
+						<input type="text" id="forgotPasswordEmail" placeholder="email">
+					</div>
+					<input type="submit" name="submit-forgot-password" value="send" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
+				</form>
+				<button id="moveToLogin" class="col-xs-12 col-sm-4 col-sm-offset-4 text-uppercase text-center change-form-button" data-dismiss="modal" data-toggle="modal" href="#loginContainer">return</button>
 			</div>
 		</div>
 	</div>
@@ -1328,8 +1566,16 @@
 	</div>
 </div>
 <div class="container-fluid login">
-	<div class="col-xs-12 col-md-2 col-md-offset-7">
-		<div id="loginRegister" class="login-text text-uppercase text-center pointer" data-toggle="modal" data-target="#loginContainer">login/register</div>
+	<div class="container">
+		<div class="col-xs-12 col-sm-6">
+			<div class="logo"></div>
+		</div>
+		<div class="col-xs-12 col-sm-6">
+			<div id="loginRegister" class="login-text text-uppercase text-center pointer" data-toggle="modal" data-target="#loginContainer">login/register</div>
+		</div>
+		<div class="col-xs-12 bottom-text">
+			<h2 class="text-uppercase text-center">battlefield 4 [ps4]</h2>
+		</div>
 	</div>
 </div>
 <div class="container-fluid social">
@@ -1509,7 +1755,7 @@
 			</div>
 			<div id="gamePaymentContainer" class="background-cover modal fade" role="dialog">
 				<div id="gamePaymentInnerWrapper" class="row covering-box game-page game-payment-wrapper modal-dialog">
-					<h2 class="col-xs-12 text-center text-uppercase">sign up</h2>
+					<h2 class="col-xs-12 text-center text-uppercase">join</h2>
 					<div class="col-xs-12">
 						<form name="game-payment" id="gamePaymentForm" class="col-xs-12">
 							<div id="choosePaymentMethod" class="col-xs-12 no-padding">
@@ -1559,10 +1805,10 @@
 			<div class="row top-row">
 				<ul class="col-xs-12 col-sm-push-1">
 					<li id="gameLoginButton" class="col-xs-6 col-sm-2 checked" data-toggle="modal" data-target="#loginOnlyContainer">
-						<p>Login <span>(click here)</span><img src="images/check-mark.png" alt="check-mark"></p>
+						<p>Login <span>(click here)</span></p>
 					</li>
 					<li id="createGameIdButton" class="col-xs-6 col-sm-2 checked" data-toggle="modal" data-target="#createGameIdContainer">
-						<p>Game ID <span>(create)</span><img src="images/check-mark.png" alt="check-mark"></p>
+						<p>Game ID <span>(create)</span></p>
 					</li>
 					<li id="chooseTeamButton" class="col-xs-6 col-sm-2" data-toggle="modal" data-target="#chooseTeamContainer">
 						<p>Team <span>(choose)</span></p>
@@ -1571,7 +1817,7 @@
 						<p>Players <span>(check)</span></p>
 					</li>
 					<li id="signUpButton" class="col-xs-6 col-sm-2 locked red-border" data-toggle="modal" data-target="#gamePaymentContainer">
-						<p>Sign up <span>(click here)</span></p>
+						<p>Join <span>(click here)</span></p>
 					</li>
 				</ul>
 			</div>
@@ -1589,25 +1835,28 @@
 					</ul>
 				</div>
 				<div id="checkInContainer" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-0">
-					<input type="button" class="col-xs-12 text-uppercase text-center" value="check in" disabled="true">
+					<input type="button" class="col-xs-12 text-uppercase text-center" value="get ready" disabled="true">
 					<span id="checkInTooltip" class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
 				</div>
 				<div id="clock" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 text-center middle-info"></div>
 			</div>
+			<div class="row title-row">
+				<p class="col-xs-12 col-sm-6 text-uppercase text-center"><span>128 teams</span> 36 ready</p>
+				<img src="images/cup-games-white.png" alt="cup">
+				<p class="col-xs-12 col-sm-6 text-uppercase text-center">start 19:00 cet <span>end 22:00 cet</span> 28.01.16</p>
+			</div>
 			<div class="row bottom-row">
 				<nav class="col-xs-12 col-sm-1 text-center games-menu">
-					<img src="images/cup-menu.png">
-					<a href="index.html" class="active">
-						<img src="images/info.png">
-					</a>
+					<img src="images/cup-left-menu.png">
 					<a href="ladder.html">
 						<img src="images/ladder.png">
 					</a>
+					<a href="index.html" class="active">
+						<img src="images/info.png">
+					</a>
+
 					<a href="teams.html">
 						<img src="images/friends-white.png">
-					</a>
-					<a href="index.html">
-						<img src="images/card.png">
 					</a>
 					<a href="support.html">
 						<img src="images/flag.png">
@@ -1631,22 +1880,6 @@
 					<p>Battlefield Hardline 2v2 Opening Cup #1</p>
 				</div>
 				<div class="col-xs-12 col-sm-4 game-chat">
-					<div class="col-xs-12 game-right-info">
-						<h4 class="col-xs-12">Teams<span> 2888 ( 199 checked in)</span></h4>
-						<div class="col-xs-12">
-							<div>
-								<img src="images/cup.png" alt="cup">
-								<div>
-									<p class="text-uppercase">start 17:25 gmt</p>
-									<p class="text-uppercase">end 20:30 gmt</p>
-								</div>
-							</div>
-							<div>
-								<p>Your next opponent:</p>
-								<a href="#">Team Amazing</a>
-							</div>
-						</div>
-					</div>
 					<div class="col-xs-12 game-chat-inner-wrapper">
 						<h5 class="text-center">Chat: 37854462</h5>
 						<div class="game-chat-inner">							
@@ -1789,5 +2022,6 @@
 <script src="./js/main_app.js"></script>
 <script src="./js/games_app.js"></script>
 <script src="./FlipClock-master/compiled/flipclock.min.js"></script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
