--- a/index.html
+++ b/index.html
@@ -1634,87 +1634,94 @@
 								</a>
 								<ul class="dropdown-menu col-xs-12 teams-to-choose">
 									<li class="team-list text-center">
-										<input type="radio" name="Kozaki" id="Kozaki"/>Kozaki
+										<label for="Kozaki">Kozaki</label>
+										<input type="radio" name="Kozaki" id="Kozaki"/>
 									</li>
 									<li class="team-list text-center">
+										<label for="Hooligans">Hooligans</label>
 										<input type="radio" name="Hooligans" id="Hooligans"/>
-										Hooligans
 									</li>
 								</ul>
 							</div>
 							<h2 class="col-xs-12 text-center text-uppercase">or</h2>
-							<div class="col-xs-12 to-choose disabled">
-								<img src="images/teams-white.png">
-								<input type="text" id="createNewTeam" placeholder="Create a new team" class="form-click">
-							</div>
-							<div class="col-xs-12 game-slider-wrapper">
-								<div id="gamesPickSlider" class="games-slider">
-									<ul>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li class="current-game">
-											<a href="#">
-												<h5><span>Battlefield 4</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h5><span>MK X</span></h5>
-												<div class="img-holder">
-													<img src="images/game-slide.png">
-												</div>
-											</a>
-										</li>
-									</ul>
+							<div class="to-choose disabled">
+								<div class="col-xs-12">
+									<img src="images/teams-white.png">
+									<input type="text" id="createNewTeam" placeholder="Create a new team" class="form-click">
+								</div>
+								<div class="col-xs-12 game-slider-wrapper form-click">
+									<div id="gamesPickSlider" class="games-slider">
+										<ul>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li class="current-game">
+												<a href="#">
+													<h5><span>Battlefield 4</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+											<li>
+												<a href="#">
+													<h5><span>MK X</span></h5>
+													<div class="img-holder">
+														<img src="images/game-slide.png">
+													</div>
+												</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="col-xs-12 form-click">
+									<input type="checkbox" id="acceptNewTeamTerms">
+									<label for="acceptNewTeamTerms" class="col-xs-12 col-sm-8 col-lg-7">I accept terms of use and Privacy Policy<span></span></label>
 								</div>
 							</div>
 							<input type="submit" name="choose-team-accept" value="accept" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
