color, padding title row, report errors

--- a/index.html
+++ b/index.html
@@ -1861,7 +1861,9 @@
 					<a href="index.html" class="active">
 						<img src="images/info.png">
 					</a>
-
+					<a href="index.html">
+						<img src="images/friends-white.png">
+					</a>
 					<a href="teams.html">
 						<img src="images/friends-white.png">
 					</a>
