--- a/team_card.html
+++ b/team_card.html
@@ -48,15 +48,15 @@
 						<form name="report" id="report" class="col-xs-12 topic-wrapper">
 							<div class="col-xs-12 upload-media">
 								<img src="images/upload-media.png" alt="upload media">
-								<input type="text" id="mediaUrlReport" placeholder="Insert URL address">
+								<input type="text" placeholder="Insert URL address">
 							</div>
 							<div class="col-xs-12 upload-media">
 								<img src="images/upload-media.png" alt="upload media">
-								<input type="text" id="mediaUrlReport" placeholder="Insert URL address">
+								<input type="text" placeholder="Insert URL address">
 							</div>
 							<div class="col-xs-12 upload-media">
 								<img src="images/upload-media.png" alt="upload media">
-								<input type="text" id="mediaUrlReport" placeholder="Insert URL address">
+								<input type="text" placeholder="Insert URL address">
 							</div>
 							<div class="col-xs-12 text-holder">
 								<textarea name="user-message" form="report" class="col-xs-12" placeholder="Write here..."></textarea>
