regule icon, footer color

--- a/index.html
+++ b/index.html
@@ -1862,7 +1862,7 @@
 						<img src="images/info.png">
 					</a>
 					<a href="index.html">
-						<img src="images/friends-white.png">
+						<img src="images/regule.png">
 					</a>
 					<a href="teams.html">
 						<img src="images/friends-white.png">
