--- a/index.html
+++ b/index.html
@@ -578,9 +578,9 @@
 			</button>	
 		</div>
 	</div>
-	<div id="loginContainer" class="background-cover covering-box modal fade" role="dialog">
-		<div id="loginInnerWrapper" class="row login-wrapper modal-dialog">
-			<h2 class="col-xs-12 text-center text-uppercase">logo</h2>
+	<div id="loginContainer" class="background-cover modal fade" role="dialog">
+		<div id="loginInnerWrapper" class="row covering-box login-wrapper modal-dialog">
+			<h2 class="col-xs-12 text-center text-uppercase">login</h2>
 			<div class="col-xs-12">
 				<form name="login" id="loginForm" class="col-xs-12">
 					<div class="col-xs-12">
@@ -602,9 +602,9 @@
 			</div>
 		</div>
 	</div>
-	<div id="forgotPasswordContainer" class="background-cover covering-box modal fade" role="dialog">
-		<div id="forgotPasswordInnerWrapper" class="row login-wrapper modal-dialog">
-			<h2 class="col-xs-12 text-center text-uppercase">logo</h2>
+	<div id="forgotPasswordContainer" class="background-cover modal fade" role="dialog">
+		<div id="forgotPasswordInnerWrapper" class="row covering-box login-wrapper modal-dialog">
+			<h2 class="col-xs-12 text-center text-uppercase">forgot password</h2>
 			<div class="col-xs-12">
 				<form name="forgot-password" id="forgotPasswordForm" class="col-xs-12">
 					<div class="col-xs-12">
@@ -617,9 +617,9 @@
 			</div>
 		</div>
 	</div>
-	<div id="registerContainer" class="background-cover covering-box">
-		<div id="registerInnerWrapper" class="row register-wrapper modal-dialog">
-			<h2 class="col-xs-12 text-center text-uppercase">logo</h2>
+	<div id="registerContainer" class="background-cover">
+		<div id="registerInnerWrapper" class="row covering-box register-wrapper modal-dialog">
+			<h2 class="col-xs-12 text-center text-uppercase">register</h2>
 			<div class="col-xs-12">
 				<form name="register" id="registerForm" class="col-xs-12">
 					<div class="col-xs-12">
@@ -1485,7 +1485,7 @@
 										</div>
 									</a>
 								</li>
-								<li class="current-game">
+								<li>
 									<a href="#">
 										<h5><span>Battlefield 4</span></h5>
 										<div class="img-holder">
@@ -1621,8 +1621,8 @@
 					</div>
 				</div>	
 			</div>
-			<div id="chooseTeamContainer" class="background-cover modal fade covering-box" role="dialog">
-				<div id="chooseTeamInnerWrapper" class="row game-page choose-team-wrapper modal-dialog">
+			<div id="chooseTeamContainer" class="background-cover modal fade" role="dialog">
+				<div id="chooseTeamInnerWrapper" class="row game-page covering-box choose-team-wrapper modal-dialog">
 					<h2 class="col-xs-12 text-center text-uppercase">choose or create a new team</h2>
 					<div class="col-xs-12">
 						<form name="choose-team" id="chooseTeamForm" class="col-xs-12">
