create team padding top

--- a/index.html
+++ b/index.html
@@ -1648,6 +1648,7 @@
 								<div class="col-xs-12">
 									<img src="images/teams-white.png">
 									<input type="text" id="createNewTeam" placeholder="Create a new team" class="form-click">
+									<span id="createTeamGamesTooltip" class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
 								</div>
 								<div class="col-xs-12 game-slider-wrapper form-click">
 									<div id="gamesPickSlider" class="games-slider">
